--- a/FearTrust.html
+++ b/FearTrust.html
@@ -3,62 +3,151 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Fear - Trust</title>
+  <title>Fear to Trust Emotional Spectrum</title>
   <style>
+    :root {
+      --primary-color: #212121;
+      --secondary-color: #64b5f6;
+      --accent: #29b6f6;
+      --border-radius: 8px;
+      --box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      --transition: all 0.3s ease;
+    }
+
     body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      background-color: #fff;
-    }
-    header {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    .content {
-      max-width: 800px;
-      margin: 0 auto;
-      text-align: left;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       line-height: 1.6;
+      color: #333;
+      background: linear-gradient(135deg, #212121, #bbdefb);
+      padding: 0;
+      margin: 0;
     }
+
+    header {
+      background: linear-gradient(to right, var(--primary-color), var(--secondary-color));
+      color: white;
+      padding: 2rem 0;
+      text-align: center;
+      box-shadow: var(--box-shadow);
+    }
+
+    .container {
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 2rem;
+    }
+
+    .content {
+      background: white;
+      border-radius: var(--border-radius);
+      box-shadow: var(--box-shadow);
+      padding: 2rem;
+      margin-bottom: 2rem;
+    }
+
+    h1 { font-size: 2.5rem; }
+
     .back-link {
-      display: inline-block;
-      margin-bottom: 20px;
+      display: inline-flex;
+      align-items: center;
+      color: var(--primary-color);
       text-decoration: none;
-      color: #0066cc;
+      font-weight: 500;
+      margin-bottom: 1.5rem;
+      transition: 0.3s ease;
+    }
+
+    .back-link:hover { color: var(--secondary-color); }
+
+    h2 {
+      color: var(--primary-color);
+      margin: 1.5rem 0 1rem;
+      padding-bottom: 0.5rem;
+      border-bottom: 2px solid var(--accent);
+      font-size: 1.5rem;
+    }
+
+    .spectrum-container {
+      position: relative;
+      height: 3rem;
+      background: linear-gradient(to right, #212121, #64b5f6);
+      border-radius: var(--border-radius);
+      margin: 1rem 0;
+    }
+
+    .emotions-list {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.5rem;
+      margin-top: 1rem;
+    }
+
+    .emotion-tag {
+      background: white;
+      border: 1px solid #ddd;
+      border-radius: 20px;
+      padding: 0.5rem 1rem;
+      font-size: 0.9rem;
+      transition: var(--transition);
+    }
+
+    .emotion-tag:hover {
+      transform: translateY(-2px);
+      box-shadow: var(--box-shadow);
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Fear vs Trust</h1>
+    <h1>Emotional Spectrum: Fear to Trust</h1>
   </header>
-  <div class="content">
-    <a href="index.html" class="back-link">&#8592; Back to Home</a>
-    <h2>Description</h2>
-    <p>
-      This emotional spectrum encompasses states ranging from deep anxiety and insecurity to cautious neutrality, progressing towards serene confidence, security, and deep trust.
-    </p>
-    <h2>Understanding</h2>
-<p> 
-  When experiencing fear, you might feel vulnerable, unsettled, or unsafe. This emotional state highlights a core need for security and reassurance. Becoming aware of these feelings allows you to address their origins compassionately and gradually build toward emotional safety and trust.
+  
+  <div class="container">
+    <div class="content">
+      <a href="index.html" class="back-link">&#8592; Back to Home</a>
+      
+      <h2>Understanding This Spectrum</h2>
+      <p>This spectrum ranges from intense fear and anxiety, moving through cautiousness and neutrality, towards calmness, safety, and deep trust.</p>
 
-</p>
-    <h2>Helping Others</h2>
-<ul>
-  <li>Offer empathy and non-judgmental listening.</li>
-  <li>Create environments of emotional safety and reassurance.</li>
-  <li>Gently encourage exploration and validation of their fears.</li>
-</ul>
-<h2>Helping Myself</h2>
-<ul>
-<li>Engage in mindful breathing to center emotions.</li>
-<li>Compassionately acknowledge and address your anxiety triggers.</li>
-  <li></li>Seek connection with supportive and understanding individuals.</li>
-></ul>
-      <h2>Range of Emotions</h2>
-    <p>
-        Terror, Panicked, Terrified, Dread, Frightened, Scared, Overwhelmed, Distressed, Fear, Worried, Tense, Uneasy, Unease, Nervous, Nervousness, Apprehensive, Apprehension, Anxious, Anxiety, Rejected, Jilted, Alienated, Inadequate, Inferior, Insecure, Unsure, Insignificant, Submissive, Passive, Inert, Caution, Neutral, Confidence, Calm, Assurance, Safety, Trust, Faith
-    </p>
+      <div class="emotion-spectrum">
+        <h3>Visualizing the Spectrum</h3>
+        <div class="spectrum-container" role="img" aria-label="Visual gradient from fear (black) to trust (light blue)"></div>
+        <div class="emotions-list">
+          <span class="emotion-tag">Terror</span>
+          <span class="emotion-tag">Anxiety</span>
+          <span class="emotion-tag">Uneasy</span>
+          <span class="emotion-tag">Neutral</span>
+          <span class="emotion-tag">Calm</span>
+          <span class="emotion-tag">Confident</span>
+          <span class="emotion-tag">Trust</span>
+        </div>
+
+      <h2>Supporting Others</h2>
+      <ul>
+        <li>Offer empathetic listening and reassurance without judgment.</li>
+        <li>Create safe spaces for them to express and explore their fears.</li>
+        <li>Encourage calming activities and gentle validation of feelings.</li>
+      </ul>
+
+      <h2>Self-Care Strategies</h2>
+      <ul>
+        <li>Practice mindful breathing and grounding techniques to reduce anxiety.</li>
+        <li>Identify triggers and proactively develop coping strategies.</li>
+        <li>Engage regularly in activities and relationships that foster feelings of safety and trust.</li>
+      </ul>
+
+      <h2>Complete Emotional Range</h2>
+      <p>The spectrum includes: Terror, Panic, Anxiety, Nervousness, Uneasy, Apprehension, Neutrality, Calmness, Assurance, Confidence, Safety, Trust, Faith.</p>
+
+      <div class="resources">
+        <h3>Additional Resources</h3>
+        <ul>
+          <li>Anxiety management resources</li>
+          <li>Counseling and therapeutic support services</li>
+          <li>Mindfulness and relaxation apps like Calm or Insight Timer</li>
+        </ul>
+      </div>
+    </div>
   </div>
 </body>
 </html>
