MBIR added to index

--- a/index.html
+++ b/index.html
@@ -385,8 +385,16 @@
         <li>Practice humility by acknowledging when you're wrong and how your actions affect others.</li>
         <li>Give yourself and others permission to experience the full range of emotions.</li>
       </ul>
-    </div>
     
+    <h2>MBIR for Emotional Understanding & Relationship Growth</h2>
+    <ul class="tips-list">
+        <li><strong>Mindset:</strong> Mindset is about the attitudes, thoughts, and beliefs you hold about emotions—both your own and others’. What assumptions do you have about feelings? Do you view emotions as strengths or weaknesses? Shifting your mindset means developing emotional openness, recognizing the value of emotions in relationships, and embracing growth in emotional intelligence.</li>
+        <li><strong>Behavior:</strong> Behavior is the way you express and manage emotions in interactions. What specific actions can you take to better understand and respond to emotions? This could involve active listening, pausing before reacting, practicing empathy, or expressing vulnerability. Changing behavior means being intentional about how you handle emotions in real-time.</li>
+        <li><strong>Impact:</strong> Now that you've identified the mindsets and behaviors you want to shift, reflect on the impact your current emotional habits have on your relationships. How do your reactions shape others’ experiences with you? What kind of emotional environment do you create? Consider how new behaviors—like staying calm in conflict, validating others’ emotions, or expressing gratitude—could improve trust and connection.</li>
+        <li><strong>Results:</strong> Imagine you’ve made these emotional shifts. How have your relationships improved? Are there stronger bonds, deeper trust, or less conflict? Have you become a person others feel safe opening up to? By aligning your mindset, behaviors, and impact, you’ll achieve meaningful results in emotional intelligence and relationship fulfillment.</li>
+    </ul>    
+  </div>
+
     <div class="about-section">
       <p>This tool is designed to help identify, understand, and navigate emotions for better self-awareness and communication.</p>
     </div>
