all use external css

--- a/HateLove.html
+++ b/HateLove.html
@@ -4,21 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hate to Love Emotional Spectrum</title>
-  <style>
-    :root {
-      --primary-color: #4a148c;
-      --secondary-color: #f48fb1;
-      --accent: #ff4081;
-      --border-radius: 8px;
-      --box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      --transition: all 0.3s ease;
-    }
-    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; line-height: 1.6; color: #333; background: linear-gradient(135deg, #4a148c, #f8bbd0); padding: 0; margin: 0; }
-    header { background: linear-gradient(to right, var(--primary-color), pink); color: white; padding: 2rem; text-align: center; box-shadow: var(--box-shadow); }
-    .container { max-width: 1000px; margin: 0 auto; padding: 2rem; }
-    .content { background: white; border-radius: var(--border-radius); box-shadow: var(--box-shadow); padding: 2rem; }
-    h2 { border-bottom: 2px solid var(--accent); padding-bottom: 0.5rem; color: var(--primary-color); }
-  </style>
+  <!-- Link to external CSS -->
+  <link rel="stylesheet" href="emotions.css">
 </head>
 <body>
   <header>
@@ -27,12 +14,14 @@
 
   <div class="container">
     <div class="content">
+      <a href="index.html" class="back-link">&#8592; Back to Home</a>
+
       <h2>Understanding This Spectrum</h2>
       <p>This emotional pathway ranges from intense dislike, hostility, and bitterness through neutral acceptance towards empathy, deep affection, compassion, and unconditional love.</p>
 
       <div class="emotion-spectrum">
         <h3>Visualizing the Spectrum</h3>
-        <div class="spectrum-container" style="height:3rem; background:linear-gradient(to right, #4a148c, #f8bbd0); border-radius:8px;"></div>
+        <div class="spectrum-container spectrum-hate-love" style="" ></div>
         <div class="emotions-list">
           <span class="emotion-tag">Hatred</span>
           <span class="emotion-tag">Resentment</span>
