--- a/SadHappy.html
+++ b/SadHappy.html
@@ -22,7 +22,7 @@
       </a>
       
       <h2>Understanding This  Spectrum</h2>
-      <p>This emotional continuum ranges from profound sadness and hopelessness, through states of resignation and neutrality, evolving towards contentment, joy, and deep emotional fulfillment. Recognizing where you are on this spectrum can help with emotional awareness and growth.</p>
+      <p>Experiencing sadness often signals emotional pain, loss, or unmet emotional needs. Recognizing and validating these feelings can help you find healing, acceptance, and eventually move toward authentic joy and fulfillment. All emotions serve a purpose and provide valuable information about our inner state. This emotional continuum ranges from profound sadness and hopelessness, through states of resignation and neutrality, evolving towards contentment, joy, and deep emotional fulfillment. Recognizing where you are on this spectrum can help with emotional awareness and growth.</p>
       
       <div class="emotion-spectrum">
         <h3>Visualizing the Spectrum</h3>
@@ -41,7 +41,7 @@
       </div>
 
       <h2>Understanding These Emotions</h2>
-      <p>Experiencing sadness often signals emotional pain, loss, or unmet emotional needs. Recognizing and validating these feelings can help you find healing, acceptance, and eventually move toward authentic joy and fulfillment. All emotions serve a purpose and provide valuable information about our inner state.</p>
+      <p></p>
 
       <h2>Supporting Others</h2>
       <ul>
