--- a/BadGood.html
+++ b/BadGood.html
@@ -4,37 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bad to Good Emotional Spectrum</title>
-  <style>
-    :root {
-      --primary-color: #0d47a1;
-      --secondary-color: #ff8a80;
-      --accent: #ff1744;
-      --border-radius: 8px;
-      --box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      --transition: all 0.3s ease;
-    }
-
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      line-height: 1.6;
-      color: #333;
-      background: linear-gradient(135deg, #0d47a1, #ff8a80);
-      padding: 0;
-      margin: 0;
-    }
-
-    header {
-      background: linear-gradient(to right, var(--primary-color), var(--secondary-color));
-      color: white;
-      padding: 2rem;
-      text-align: center;
-      box-shadow: var(--box-shadow);
-    }
-
-    .container { max-width: 1000px; margin: 0 auto; padding: 2rem; }
-    .content { background: white; border-radius: var(--border-radius); box-shadow: var(--box-shadow); padding: 2rem; }
-    h2 { border-bottom: 2px solid var(--accent); padding-bottom: 0.5rem; color: var(--primary-color); }
-  </style>
+  <!-- Link to external CSS -->
+  <link rel="stylesheet" href="emotions.css">
 </head>
 <body>
   <header>
@@ -50,7 +21,7 @@
 
       <div class="emotion-spectrum">
         <h3>Visualizing the Spectrum</h3>
-        <div class="spectrum-container" style="height:3rem; background:linear-gradient(to right, darkblue, lightcoral); border-radius: var(--border-radius);"></div>
+        <div class="spectrum-container spectrum-bad-good"></div>
         <div class="emotions-list">
           <span class="emotion-tag">Loathing</span>
           <span class="emotion-tag">Disgust</span>
